package(default_visibility = ["//visibility:public"])

load("@io_k8s_test_infra//def:image.bzl", "tags")
load("@io_k8s_test_infra//prow:def.bzl", "prow_push")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix sigs.k8s.io/boskos
# gazelle:proto disable
gazelle(name = "gazelle")

prow_push(
    name = "push",
    images = tags(targets = {
        "{STABLE_PROW_REPO}/boskos/aws-janitor": "//aws-janitor:image",
        "{STABLE_PROW_REPO}/boskos/aws-janitor-boskos": "//aws-janitor/cmd/aws-janitor-boskos:image",
        "{STABLE_PROW_REPO}/boskos/boskos": "//cmd/boskos:image",
        "{STABLE_PROW_REPO}/boskos/fake-mason": "//cmd/fake-mason:image",
        "{STABLE_PROW_REPO}/boskos/cleaner": "//cmd/cleaner:image",
        "{STABLE_PROW_REPO}/boskos/janitor": "//cmd/janitor:image",
        "{STABLE_PROW_REPO}/boskos/metrics": "//cmd/metrics:image",
        "{STABLE_PROW_REPO}/boskos/reaper": "//cmd/reaper:image",
        "{STABLE_PROW_REPO}/boskos/cli": "//cmd/boskosctl:image",
    }),
)
