load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/boskos/aws-janitor",
    visibility = ["//visibility:private"],
    deps = [
        "//aws-janitor/account:go_default_library",
        "//aws-janitor/regions:go_default_library",
        "//aws-janitor/resources:go_default_library",
        "//aws-janitor/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

NAME = "aws-janitor"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

prow_image(
    name = "image",
    base = "@gcloud-go//image",
    component = NAME,
    visibility = ["//visibility:public"],
)
