load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cleaner.go"],
    importpath = "sigs.k8s.io/boskos/cleaner",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//crds:go_default_library",
        "//mason:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cleaner_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//crds:go_default_library",
        "//mason:go_default_library",
        "//ranch:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
