load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "mason.go",
    ],
    importpath = "sigs.k8s.io/boskos/mason",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//crds:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mason_test.go"],
    data = [":testdata"],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//crds:go_default_library",
        "//ranch:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    srcs = [
        "test-resources.yaml",
    ],
    visibility = ["//visibility:public"],
)
