load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["resources.go"],
    importpath = "k8s.io/test-infra/boskos/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//boskos/common:go_default_library",
        "//boskos/ranch:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["resources_test.go"],
    embed = [":go_default_library"],
    deps = ["//boskos/common:go_default_library"],
)
