load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["resources.go"],
    importpath = "sigs.k8s.io/boskos/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//ranch:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["resources_test.go"],
    embed = [":go_default_library"],
    deps = ["//common:go_default_library"],
)
