load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "k8s.io/test-infra/boskos/storage",
    visibility = ["//visibility:public"],
    deps = ["//boskos/common:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    embed = [":go_default_library"],
    deps = ["//boskos/common:go_default_library"],
)
