load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

NAME = "boskos"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

prow_image(
    name = "image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["boskos.go"],
    importpath = "sigs.k8s.io/boskos/cmd/boskos",
    visibility = ["//visibility:private"],
    deps = [
        "//crds:go_default_library",
        "//handlers:go_default_library",
        "//metrics:go_default_library",
        "//ranch:go_default_library",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/logrusutil:go_default_library",
        "@io_k8s_test_infra//prow/metrics:go_default_library",
        "@io_k8s_test_infra//prow/pjutil:go_default_library",
    ],
)
