load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/boskos/cmd/cleaner",
    visibility = ["//visibility:private"],
    deps = [
        "//cleaner:go_default_library",
        "//cleaner/v2:go_default_library",
        "//client:go_default_library",
        "//crds:go_default_library",
        "//ranch:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/logrusutil:go_default_library",
        "@io_k8s_test_infra//prow/metrics:go_default_library",
        "@io_k8s_test_infra//prow/pjutil:go_default_library",
    ],
)

NAME = "cleaner"

prow_image(
    name = "image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
