load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

go_library(
    name = "go_default_library",
    srcs = ["cli.go"],
    importpath = "sigs.k8s.io/boskos/cmd/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//client:go_default_library",
        "//common:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

NAME = "boskosctl"

prow_image(
    name = "image",
    base = "@boskosctl-base//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["cli_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//client:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
    ],
)
