load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/boskos/cmd/fake-mason",
    visibility = ["//visibility:private"],
    deps = [
        "//client:go_default_library",
        "//common:go_default_library",
        "//crds:go_default_library",
        "//mason:go_default_library",
        "//ranch:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
    ],
)

NAME = "fake-mason"

prow_image(
    name = "image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
