package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")
load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
    "go_test",
)

NAME = "janitor"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    pure = "on",
)

go_library(
    name = "go_default_library",
    srcs = ["janitor.go"],
    importpath = "sigs.k8s.io/boskos/cmd/janitor",
    deps = [
        "//client:go_default_library",
        "//common:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

filegroup(
    name = "janitor_files",
    srcs = ["gcp_janitor.py"],
)

pkg_tar(
    name = "janitor_tar",
    srcs = [":janitor_files"],
    mode = "0o755",
    package_dir = "bin",
)

container_image(
    name = "janitor_image",
    base = "@cloud-sdk-slim//image",
    tars = [":janitor_tar"],
)

prow_image(
    name = "image",
    base = ":janitor_image",
    component = NAME,
    # the entrypoint must be sh
    # https://github.com/kubernetes/test-infra/issues/5877
    entrypoint = [
        "/bin/sh",
        "-c",
        "/bin/echo started && /app/boskos/cmd/janitor/app.binary \"$@\"",
        "--",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["janitor_test.go"],
    embed = [":go_default_library"],
    deps = ["//common:go_default_library"],
)
