package(default_visibility = ["//visibility:public"])

load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

licenses(["notice"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)

NAME = "metrics"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    pure = "on",
)

go_library(
    name = "go_default_library",
    srcs = ["metrics.go"],
    importpath = "sigs.k8s.io/boskos/cmd/metrics",
    deps = [
        "//client:go_default_library",
        "//common:go_default_library",
        "//metrics:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/logrusutil:go_default_library",
        "@io_k8s_test_infra//prow/metrics:go_default_library",
    ],
)

prow_image(
    name = "image",
    component = NAME,
    visibility = ["//visibility:public"],
)
