load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "sigs.k8s.io/boskos/common/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
    ],
)
