load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_k8s_test_infra//prow:def.bzl", "prow_image")

NAME = "aws-janitor-boskos"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

prow_image(
    name = "image",
    base = "@gcloud-go//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/boskos/aws-janitor/cmd/aws-janitor-boskos",
    visibility = ["//visibility:private"],
    deps = [
        "//aws-janitor/resources:go_default_library",
        "//client:go_default_library",
        "//common:go_default_library",
        "//common/aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
