load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/boskos/aws-janitor/cmd/aws-resources-list",
    visibility = ["//visibility:private"],
    deps = [
        "//boskos/aws-janitor/account:go_default_library",
        "//boskos/aws-janitor/regions:go_default_library",
        "//boskos/aws-janitor/resources:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
    ],
)

go_binary(
    name = "aws-resources-list",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
