load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/boskos/aws-janitor/cmd/aws-resources-list",
    visibility = ["//visibility:private"],
    deps = [
        "//aws-janitor/account:go_default_library",
        "//aws-janitor/regions:go_default_library",
        "//aws-janitor/resources:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
    ],
)

go_binary(
    name = "aws-resources-list",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
